syntax = "proto3";

package calculator;
option go_package="calculatorpb";

// Unary Request Messages
message Parameters{
    int32 p1 = 1;
    int32 p2 = 2;
}

message SumRequest{
    Parameters parameters = 1;
}

message SumResponse{
    int32 result = 1;
}

// Server Streaming Messages
message PrimeRequest{
    int32 num = 1;
}

message PrimeResponse{
    int32 result = 1;
}

// Client Streaming Messages
message ComputeAverageRequest{
    int64 num = 1;
}

message ComputeAverageResponse{
    double result = 1;
}

// Bidirectional Streaming Messages
message FindMaximumRequest{
    int64 num = 1;
}

message FindMaximumResponse{
    int64 result = 1;
}

service CalculatorService{

    // Unary 
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Stream from server
    rpc PrimeNumberDecomposition(PrimeRequest) returns (stream PrimeResponse) {};

    // Stream from client
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

    // Bidirectional Streaming
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}